// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderDeclarations > does not render unnecessary declarations 1`] = `
":global body{
	--fontFamilyBase-css:"Helvetica Neue", Arial, sans-serif;
}"
`;

exports[`renderDeclarations > includes secondary theme 1`] = `
"body{
	--fontFamilyBase-css:"Helvetica Neue", Arial, sans-serif;
	--fontFamilyBody-css:var(--fontFamilyBase-css);
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:var(--grey-css);
	--buttonShadow-css:var(--shadow-css);
	--boxShadow-css:var(--shadow-css);
	--lineShadow-css:var(--buttonShadow-css);
	--small-css:1px;
	--medium-css:3px;
	--scaledSize-css:var(--medium-css);
	--appear-css:20ms;
	--containerShadowBase-css:2px 3px orange, -1px 0 8px olive;
	--modalShadowContainer-css:var(--containerShadowBase-css);
}
.compact{
	--scaledSize-css:var(--small-css);
}
@media not print {.dark{
	--shadow-css:var(--black-css);
	--boxShadow-css:var(--brown-css);
	--lineShadow-css:var(--boxShadow-css);
}}
.disabled-motion{
	--appear-css:0;
}
.navigation{
	--shadow-css:var(--black-css);
	--boxShadow-css:purple;
	--buttonShadow-css:var(--shadow-css);
	--lineShadow-css:var(--buttonShadow-css);
}
@media not print {.dark .navigation{
	--shadow-css:var(--brown-css);
	--lineShadow-css:var(--boxShadow-css);
}}
@media not print {.dark.navigation{
	--shadow-css:var(--brown-css);
	--lineShadow-css:var(--boxShadow-css);
}}
.secondary-theme{
	--black-css:purple;
	--brown-css:black;
}
.secondary-theme .navigation{
	--boxShadow-css:var(--shadow-css);
}
.navigation.secondary-theme{
	--boxShadow-css:var(--shadow-css);
}
@media not print {.dark.secondary-theme .navigation{
	--shadow-css:var(--grey-css);
	--boxShadow-css:var(--brown-css);
}}
@media not print {.dark.navigation.secondary-theme{
	--shadow-css:var(--grey-css);
	--boxShadow-css:var(--brown-css);
	--lineShadow-css:var(--boxShadow-css);
}}"
`;

exports[`renderDeclarations > renders declarations for theme with :root selector and context 1`] = `
":global body{
	--fontFamilyBase-css:"Helvetica Neue", Arial, sans-serif;
	--fontFamilyBody-css:var(--fontFamilyBase-css);
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:var(--grey-css);
	--buttonShadow-css:var(--shadow-css);
	--boxShadow-css:var(--shadow-css);
	--lineShadow-css:var(--buttonShadow-css);
	--small-css:1px;
	--medium-css:3px;
	--scaledSize-css:var(--medium-css);
	--appear-css:20ms;
	--containerShadowBase-css:2px 3px orange, -1px 0 8px olive;
	--modalShadowContainer-css:var(--containerShadowBase-css);
}
:global .compact{
	--scaledSize-css:var(--small-css);
}
@media not print {:global .dark{
	--shadow-css:var(--black-css);
	--boxShadow-css:var(--brown-css);
	--lineShadow-css:var(--boxShadow-css);
}}
:global .disabled-motion{
	--appear-css:0;
}
:global .navigation{
	--shadow-css:var(--black-css);
	--boxShadow-css:purple;
	--buttonShadow-css:var(--shadow-css);
	--lineShadow-css:var(--buttonShadow-css);
}
@media not print {:global .dark .navigation{
	--shadow-css:var(--brown-css);
	--lineShadow-css:var(--boxShadow-css);
}}
@media not print {:global .dark.navigation{
	--shadow-css:var(--brown-css);
	--lineShadow-css:var(--boxShadow-css);
}}"
`;

exports[`renderDeclarations > renders declarations for theme with non :root selector 1`] = `
".secondary-theme{
	--fontFamilyBase-css:"Helvetica Neue", Arial, sans-serif;
	--fontFamilyBody-css:var(--fontFamilyBase-css);
	--black-css:purple;
	--grey-css:grey;
	--brown-css:black;
	--shadow-css:var(--grey-css);
	--buttonShadow-css:var(--shadow-css);
	--boxShadow-css:var(--shadow-css);
	--lineShadow-css:var(--buttonShadow-css);
	--small-css:1px;
	--medium-css:3px;
	--scaledSize-css:var(--medium-css);
	--appear-css:20ms;
	--containerShadowBase-css:2px 3px orange, -1px 0 8px olive;
	--modalShadowContainer-css:var(--containerShadowBase-css);
}
.compact.secondary-theme{
	--scaledSize-css:var(--small-css);
}
@media not print {.dark.secondary-theme{
	--shadow-css:var(--black-css);
	--boxShadow-css:var(--brown-css);
	--lineShadow-css:var(--boxShadow-css);
}}
.disabled-motion.secondary-theme{
	--appear-css:0;
}
.secondary-theme .navigation{
	--shadow-css:var(--black-css);
	--buttonShadow-css:var(--shadow-css);
	--boxShadow-css:var(--shadow-css);
	--lineShadow-css:var(--buttonShadow-css);
}
.navigation.secondary-theme{
	--shadow-css:var(--black-css);
	--buttonShadow-css:var(--shadow-css);
	--boxShadow-css:var(--shadow-css);
	--lineShadow-css:var(--buttonShadow-css);
}
@media not print {.dark.secondary-theme .navigation{
	--shadow-css:var(--grey-css);
	--boxShadow-css:var(--brown-css);
	--lineShadow-css:var(--boxShadow-css);
}}
@media not print {.dark.navigation.secondary-theme{
	--shadow-css:var(--grey-css);
	--boxShadow-css:var(--brown-css);
	--lineShadow-css:var(--boxShadow-css);
}}"
`;
